add geolocation support via geolocation

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,10 @@
       <button>Send</button>
     </form>
 
-    <!--  load in socket io -->
+    <button id="send-location">Send Location</button>
+
+    <!--  load in socket io. this path is available when socket is installed
+    e.g. localhost:3000/socket.io/socket.io.js-->
     <script src="/socket.io/socket.io.js" charset="utf-8"></script>
     <!-- load in locally sourced jquery library -->
     <script src="/js/libs/jquery-3.3.1.min.js" charset="utf-8"></script>
