Format timestamps using moment.js

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,8 @@
     <!-- load in locally sourced jquery library -->
     <script src="/js/libs/jquery-3.3.1.min.js" charset="utf-8"></script>
     <!-- load in local index.js, which contains javascript to run on this page -->
-    <script src="/js/index.js">
-
-    </script>
+    <script src="/js/index.js"></script>
+    <!-- load in moment.js, which is copied from node_modules. allows client side timestamp creation  -->
+    <script src="/js/libs/moment.js" charset="utf-8"></script>
   </body>
 </html>
