altered index.html source order

--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,9 @@
     <script src="/socket.io/socket.io.js" charset="utf-8"></script>
     <!-- load in locally sourced jquery library -->
     <script src="/js/libs/jquery-3.3.1.min.js" charset="utf-8"></script>
+    <!-- load in moment.js, which is copied from node_modules. allows client side timestamp creation  -->
+    <script src="/js/libs/moment.js"></script>
     <!-- load in local index.js, which contains javascript to run on this page -->
     <script src="/js/index.js"></script>
-    <!-- load in moment.js, which is copied from node_modules. allows client side timestamp creation  -->
-    <script src="/js/libs/moment.js" charset="utf-8"></script>
   </body>
 </html>
