add moustachejs for message templates

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,33 @@
     </div>
 <!-- render messages in ordered list -->
 
+    <script id="message-template" type="text/template">
+      <li class = "message">
+        <div class = "message__title">
+          <h4>{{from}}</h4>
+          <span>{{createdAt}}</span>
+        </div>
+        <div class = "message__body">
+          <p>{{text}}</p>
+        </div>
+      </li>
+    </script>
+
+    <script id="location-message-template" type="text/template">
+      <li class = "message">
+        <div class = "message__title">
+          <h4>{{from}}</h4>
+          <span>{{createdAt}}</span>
+        </div>
+        <div class = "message__body">
+          <p>
+            <a href="{{url}}" target="_blank">My current location</a>
+          </p>
+        </div>
+      </li>
+    </script>
+
+
     <!--  load in socket io. this path is available when socket is installed
     e.g. localhost:3000/socket.io/socket.io.js-->
     <script src="/socket.io/socket.io.js" charset="utf-8"></script>
@@ -39,6 +66,7 @@
     <!-- load in moment.js, which is copied from node_modules. allows client side timestamp creation  -->
     <script src="/js/libs/moment.js"></script>
     <!-- load in local index.js, which contains javascript to run on this page -->
+    <script src="/js/libs/mustache.js"></script>
     <script src="/js/index.js"></script>
   </body>
 </html>
