--- a/public/index.html
+++ b/public/index.html
@@ -2,71 +2,29 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Join | ChatApp</title>
+    <meta name="viewport" content="width=device-width, intial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
-  <link rel="stylesheet" href="/css/styles.css">
+  <body class="centered-form">
+    <div class="centered-form__form">
+      <form action="/chat.html">
+        <div class="form-field">
+          <h3>Chat</h3>
+        </div>
+        <div class="form-field">
+          <label>Display name</label>
+          <input type="text" name="Name" autofocus placeholder="Your name"/>
+        </div>
+        <div class="form-field">
+          <label>Room name</label>
+          <input type="text" name="room" value="wowspin"/>
+        </div>
+        <div class="form-field">
+          <button>Join</button>
+        </div>
+      </form>
 
-  <body class="chat">
-    <div class="chat__sidebar">
-      <h3>People</h3>
-      <div id="users">
-
-      </div>
     </div>
-
-    <div class="chat__main">
-      <ol id="messages" class="chat__messages">
-      </ol>
-
-      <div class="chat__footer">
-        <!-- message input goes here  -->
-
-        <form id="message-form">
-          <input name="message" type="text" placeholder="Message" autofocus autocomplete="off"/>
-          <button>Send</button>
-        </form>
-
-        <button id="send-location">Send location</button>
-      </div>
-    </div>
-<!-- render messages in ordered list -->
-
-    <script id="message-template" type="text/template">
-      <li class = "message">
-        <div class = "message__title">
-          <h4>{{from}}</h4>
-          <span>{{createdAt}}</span>
-        </div>
-        <div class = "message__body">
-          <p>{{text}}</p>
-        </div>
-      </li>
-    </script>
-
-    <script id="location-message-template" type="text/template">
-      <li class = "message">
-        <div class = "message__title">
-          <h4>{{from}}</h4>
-          <span>{{createdAt}}</span>
-        </div>
-        <div class = "message__body">
-          <p>
-            <a href="{{url}}" target="_blank">My current location</a>
-          </p>
-        </div>
-      </li>
-    </script>
-
-
-    <!--  load in socket io. this path is available when socket is installed
-    e.g. localhost:3000/socket.io/socket.io.js-->
-    <script src="/socket.io/socket.io.js" charset="utf-8"></script>
-    <!-- load in locally sourced jquery library -->
-    <script src="/js/libs/jquery-3.3.1.min.js" charset="utf-8"></script>
-    <!-- load in moment.js, which is copied from node_modules. allows client side timestamp creation  -->
-    <script src="/js/libs/moment.js"></script>
-    <!-- load in local index.js, which contains javascript to run on this page -->
-    <script src="/js/libs/mustache.js"></script>
-    <script src="/js/index.js"></script>
   </body>
 </html>
