Add Users Class and updateUserList event

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="form-field">
           <label>Display name</label>
-          <input type="text" name="Name" autofocus placeholder="Your name"/>
+          <input type="text" name="name" autofocus placeholder="Your name" autocomplete="off"/>
         </div>
         <div class="form-field">
           <label>Room name</label>
