--- a/public/chat.html
+++ b/public/chat.html
@@ -70,6 +70,7 @@
     <script src="/js/libs/moment.js"></script>
     <!-- load in local index.js, which contains javascript to run on this page -->
     <script src="/js/libs/mustache.js"></script>
+    <script src="/js/libs/deparam.js"></script>
     <script src="/js/chat.js"></script>
   </body>
 </html>
